feat: Add unit tests for InjuryService to validate healing logic and injury retrieval